--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
-    "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+  "dependencies": {
+    "@react-google-maps/api": "^2.19.2",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
